<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="collioni.douglas.contabancaria.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:id="@+id/et_nome"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/rg_tipo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pessoa_fisica"
            android:id="@+id/rb_pf"
            android:checked="true"
            android:layout_marginRight="16dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pessoa_juridica"
            android:id="@+id/rb_pj" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:layout_marginTop="8dp"
        android:id="@+id/et_cpf_cnpj"
        android:inputType="number" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_de_credito"
        android:layout_marginTop="8dp"
        android:id="@+id/cb_cartao"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seguro_do_cartao"
        android:enabled="false"
        android:layout_marginTop="8dp"
        android:id="@+id/cb_seguro"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talao_de_cheques"
        android:checked="true"
        android:layout_marginTop="8dp"
        android:id="@+id/cb_talao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_marginTop="8dp"
        android:layout_gravity="end"
        android:id="@+id/bt_cadastrar"/>

</LinearLayout>
